--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
+body{
+  background-color: #96b2e0;
+}
+h3{
+  color: blue;
+  font-family: fantasy;
+  font-weight: bold;
+}
+h2{
+  color: blue;
+  font-weight: bold;
+}
 .rubyRails{
   display: none;
 }
@@ -9,7 +21,32 @@
 }
 .reccomendation{
   display: none;
+  text-align: center;
+  font-size: 40px;
 }
 .information{
   display: none;
+  text-align: center;
+  font-size: 40px;
+}
+.well{
+  min-height: 300px;
+  background-color: lightblue;
+  border-style:  double;
+  border-color: blue;
+  font-family: fantasy;
+
+}
+.jumbotron{
+  background-color: lightblue;
+  border-style: double;
+  border-color: blue;
+  font-family: fantasy;
+}
+#form1{
+  color: blue;
+}
+#head{
+  padding-left: 20px;
+  font-weight: bold;
 }
